# bit

./: .gitignore  Doxyfile  bit-logo.ansi  bit-logo.txt  bit-logo.xcf  style-guide.md
examples/: CMakeLists.txt  opt-parse.cpp
src/: .vimrc_local  CMakeLists.txt  bit-add.cpp  bit-add.hpp  bit-build.cpp  bit-init.cpp  bit-init.hpp  bit-test.cpp  bit.cpp  bit.hpp  bit_env.hpp  broken_opts.cpp  broken_opts.hpp  build_config.hpp  cmd-build.cpp  cmd-build.hpp  cmd-init.cpp  cmd-init.hpp  cmd-set.cpp  cmd-set.hpp  cmd-unset.cpp  cmd-unset.hpp  config.hpp  db.cpp  db.hpp  db_keys.hpp  db_object.hpp  file.hpp  merge_opts.hpp  o2.hpp  opt_table.hpp  option.cpp  option.hpp  options.cpp  options.hpp  parse.hpp  record.cpp  record.hpp  resource.hpp  test.csv  (+2 more)
src/.bit/: db  db.csv
test/01-hello-world/: hello-world.cpp
